# mlcast-dataset-metoffice-nimrod

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  convert_data.sh  convert_data_parallel.sh  download_data.sh  download_range.sh  nimrod.py  pyproject.toml
